# urbanlab-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  backend-plan.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  openapi.json  pyproject.toml
backend/app/: config.py  database.py  limiter.py  main.py
backend/app/models/: chat.py  schemas.py  user.py
backend/app/routers/: assistant.py  auth.py  chat.py  data.py  geo.py
backend/app/services/: analytics.py  auth.py  document_ai.py  geo_queries.py  model_client.py  qdrant_store.py  rag_service.py  reservation_service.py
backend/scripts/: export_openapi.py  migrate_optional_auth.py
backend/tests/: conftest.py  test_chat.py  test_health.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/app/: assistant.tsx  globals.css  layout.tsx
frontend/components/assistant-ui/: markdown-text.tsx  shiki-highlighter.tsx  thread.tsx  threadlist-sidebar.tsx  tool-fallback.tsx
frontend/components/auth/: auth-gate.tsx
frontend/lib/: anon-sessions.ts  api.ts  chat-adapter.ts  dictation-adapter.ts  thread-list-adapter.tsx
frontend/src/api/: client.ts
frontend/src/components/: BarChart.tsx  ChoroplethMap.tsx  (+2 more)
model-services/text-model/: Dockerfile  app.py
notebooks/: 01_explore.ipynb  Dockerfile
pipeline/: Dockerfile  download_web_data.py  ingest.py  load.py  pyproject.toml  run.sh  transform.py
scripts/: db_init.sql  wait_for_db.sh
whisper/: Dockerfile  README.md  compose.yaml  req.txt
whisper/app/: webservice.py
(+6 files in other folders)
